feat: add js(slider, main-menu) and animation

--- a/index.html
+++ b/index.html
@@ -31,17 +31,17 @@
             </div>
             <div class="user-block__social">
                 <div class="social">
-                    <a href="#" class="social__item social__facebook">
+                    <a href="#" class="social__item social__facebook" target="_blank">
                         <svg class="icon icon_facebook">
                            <use xlink:href="img/sprite.svg#facebook-icon"></use>
                         </svg>
                     </a>
-                    <a href="#" class="social__item social__twitter">
+                    <a href="#" class="social__item social__twitter" target="_blank">
                         <svg class="icon icon_twitter">
                            <use xlink:href="img/sprite.svg#twitter-icon"></use>
                         </svg>
                     </a>
-                    <a href="#" class="social__item social__google-plus">
+                    <a href="#" class="social__item social__google-plus" target="_blank">
                         <svg class="icon icon_google-plus">
                            <use xlink:href="img/sprite.svg#google-plus-icon"></use>
                         </svg>
@@ -170,7 +170,7 @@
                         </div>
                     </div>
                     <div class="main-menu__submenu">
-                        <ul class="submenu submenu_1" id="submenu__blog">
+                        <ul class="submenu submenu_1 submenu_invisible" id="submenu__blog">
                             <li class="submenu__item submenu__item_1">
                                 <a href="" class="submenu__link submenu__link_1">
                                     <span>Tech</span>
@@ -242,7 +242,7 @@
                         <!--socials--->
                         <div class="row">
                             <div class="social-block">
-                                <a href="#" class="social-block__link">
+                                <a href="#" class="social-block__link social-block__link_facebook" target="_blank">
                                     <span class="social-block__icon">
                                         <svg class="icon icon_facebook">
                                             <use xlink:href="img/sprite.svg#facebook-icon"></use>
@@ -250,7 +250,7 @@
                                     </span>
                                     <span class="social-block__text">Facebook</span>
                                 </a>
-                                <a href="#" class="social-block__link">
+                                <a href="#" class="social-block__link social-block__link_twitter" target="_blank">
                                     <span class="social-block__icon">
                                         <svg class="icon icon_twitter">
                                             <use xlink:href="img/sprite.svg#twitter-icon"></use>
@@ -258,7 +258,7 @@
                                     </span>
                                     <span class="social-block__text">Twitter</span>
                                 </a>
-                                <a href="#" class="social-block__link">
+                                <a href="#" class="social-block__link social-block__link_google-plus" target="_blank">
                                     <span class="social-block__icon">
                                         <svg class="icon icon_google-plus">
                                             <use xlink:href="img/sprite.svg#google-plus-icon"></use>
@@ -266,7 +266,7 @@
                                     </span>
                                     <span class="social-block__text">Google +</span>
                                 </a>
-                                <a href="#" class="social-block__link">
+                                <a href="#" class="social-block__link social-block__link_rss" target="_blank">
                                     <span class="social-block__icon">
                                         <svg class="icon icon_rss">
                                             <use xlink:href="img/sprite.svg#rss-icon"></use>
@@ -274,7 +274,7 @@
                                     </span>
                                     <span class="social-block__text">Rss Feeds</span>
                                 </a>
-                                <a href="#" class="social-block__link">
+                                <a href="#" class="social-block__link social-block__link_pinterest" target="_blank">
                                     <span class="social-block__icon">
                                         <svg class="icon icon_pinterest">
                                             <use xlink:href="img/sprite.svg#pinterest-icon"></use>
@@ -336,22 +336,22 @@
                         <h3 class="sign-in-block__title">Sign In</h3>
                         <p class="sign-in-block__text">Just select your favorite social network to get started</p>
                         <div class="sign-in-block__btns">
-                            <a href="#" class="sign-in-block__btn sign-in-block__btn_facebook">
+                            <a href="#" class="sign-in-block__btn sign-in-block__btn_facebook" target="_blank">
                                 <svg class="icon icon_facebook">
                                     <use xlink:href="img/sprite.svg#facebook-icon"></use>
                                 </svg>
                             </a>
-                            <a href="#" class="sign-in-block__btn sign-in-block__btn_twitter">
+                            <a href="#" class="sign-in-block__btn sign-in-block__btn_twitter" target="_blank">
                                 <svg class="icon icon_twitter">
                                     <use xlink:href="img/sprite.svg#twitter-icon"></use>
                                 </svg>
                             </a>
-                            <a href="#" class="sign-in-block__btn sign-in-block__btn_google-plus">
+                            <a href="#" class="sign-in-block__btn sign-in-block__btn_google-plus" target="_blank">
                                 <svg class="icon icon_google-plus">
                                     <use xlink:href="img/sprite.svg#google-plus-icon"></use>
                                 </svg>
                             </a>
-                            <a href="#" class="sign-in-block__btn sign-in-block__btn_linkedin">
+                            <a href="#" class="sign-in-block__btn sign-in-block__btn_linkedin" target="_blank">
                                 <svg class="icon icon_linkedin">
                                     <use xlink:href="img/sprite.svg#linkedin-icon"></use>
                                 </svg>
@@ -514,48 +514,130 @@
                       <label for="news-feed-block-radio-3" class="news-feed-block__toggle"></label>
                     </div>
                   </div>
+                  <div class="news-feed-block__wrapper">
                   <ul class="news-feed-block__list">
                     <li class="news-feed-block__item">
-                      <img src="" alt="" width="71" height="71" class="news-feed-block__image">
+                      <img src="" alt="" width="70" height="70" class="news-feed-block__image">
                       <div class="news-feed-block__wrapper">
-                      <a href="" class="news-feed-block__link">
+                      <a href="#" class="news-feed-block__link">
                         <h3 class="news-feed-block__text">A New Yorker doesn`t necessarily come from...</h3></a>
                       <time class="news-feed-block__time">3 minutes ago</time>
                       </div>
                     </li>
                     <li class="news-feed-block__item">
-                      <img src="" alt="" width="71" height="71" class="news-feed-block__image">
+                      <img src="" alt="" width="70" height="70" class="news-feed-block__image">
                       <div class="news-feed-block__wrapper">
-                      <a href="" class="news-feed-block__link">
+                      <a href="#" class="news-feed-block__link">
                         <h3 class="news-feed-block__text">A New Yorker never looks up...</h3></a>
                       <time class="news-feed-block__time">7 hours ago</time>
                       </div>
                     </li>
                     <li class="news-feed-block__item">
-                      <img src="" alt="" width="71" height="71" class="news-feed-block__image">
+                      <img src="" alt="" width="70" height="70" class="news-feed-block__image">
                       <div class="news-feed-block__wrapper">
-                      <a href="" class="news-feed-block__link">
+                      <a href="#" class="news-feed-block__link">
                         <h3 class="news-feed-block__text">A New Yorker doesn`t take cabs</h3></a>
                       <time class="news-feed-block__time">23 hours ago</time>
                       </div>
                     </li>
                     <li class="news-feed-block__item">
-                      <img src="" alt="" width="71" height="71" class="news-feed-block__image">
+                      <img src="" alt="" width="70" height="70" class="news-feed-block__image">
                       <div class="news-feed-block__wrapper">
-                      <a href="" class="news-feed-block__link">
+                      <a href="#" class="news-feed-block__link">
                         <h3 class="news-feed-block__text">A New Yorker views celebrities as regular...</h3></a>
                       <time class="news-feed-block__time">1 day ago</time>
                       </div>
                     </li>
                     <li class="news-feed-block__item">
-                      <img src="" alt="" width="71" height="71" class="news-feed-block__image">
+                      <img src="" alt="" width="70" height="70" class="news-feed-block__image">
                       <div class="news-feed-block__wrapper">
-                      <a href="" class="news-feed-block__link">
+                      <a href="#" class="news-feed-block__link">
+                        <h3 class="news-feed-block__text">A New Yorker never looks up...</h3></a>
+                      <time class="news-feed-block__time">2 days ago</time>
+                      </div>
+                    </li>
+                    <li class="news-feed-block__item">
+                      <img src="" alt="" width="70" height="70" class="news-feed-block__image">
+                      <div class="news-feed-block__wrapper">
+                      <a href="#" class="news-feed-block__link">
+                        <h3 class="news-feed-block__text">A New Yorker doesn`t necessarily come from...</h3></a>
+                      <time class="news-feed-block__time">3 minutes ago</time>
+                      </div>
+                    </li>
+                    <li class="news-feed-block__item">
+                      <img src="" alt="" width="70" height="70" class="news-feed-block__image">
+                      <div class="news-feed-block__wrapper">
+                      <a href="#" class="news-feed-block__link">
+                        <h3 class="news-feed-block__text">A New Yorker never looks up...</h3></a>
+                      <time class="news-feed-block__time">7 hours ago</time>
+                      </div>
+                    </li>
+                    <li class="news-feed-block__item">
+                      <img src="" alt="" width="70" height="70" class="news-feed-block__image">
+                      <div class="news-feed-block__wrapper">
+                      <a href="#" class="news-feed-block__link">
+                        <h3 class="news-feed-block__text">A New Yorker doesn`t take cabs</h3></a>
+                      <time class="news-feed-block__time">23 hours ago</time>
+                      </div>
+                    </li>
+                    <li class="news-feed-block__item">
+                      <img src="" alt="" width="70" height="70" class="news-feed-block__image">
+                      <div class="news-feed-block__wrapper">
+                      <a href="#" class="news-feed-block__link">
+                        <h3 class="news-feed-block__text">A New Yorker views celebrities as regular...</h3></a>
+                      <time class="news-feed-block__time">1 day ago</time>
+                      </div>
+                    </li>
+                    <li class="news-feed-block__item">
+                      <img src="" alt="" width="70" height="70" class="news-feed-block__image">
+                      <div class="news-feed-block__wrapper">
+                      <a href="#" class="news-feed-block__link">
+                        <h3 class="news-feed-block__text">A New Yorker never looks up...</h3></a>
+                      <time class="news-feed-block__time">2 days ago</time>
+                      </div>
+                    </li>
+                    <li class="news-feed-block__item">
+                      <img src="" alt="" width="70" height="70" class="news-feed-block__image">
+                      <div class="news-feed-block__wrapper">
+                      <a href="#" class="news-feed-block__link">
+                        <h3 class="news-feed-block__text">A New Yorker doesn`t necessarily come from...</h3></a>
+                      <time class="news-feed-block__time">3 minutes ago</time>
+                      </div>
+                    </li>
+                    <li class="news-feed-block__item">
+                      <img src="" alt="" width="70" height="70" class="news-feed-block__image">
+                      <div class="news-feed-block__wrapper">
+                      <a href="#" class="news-feed-block__link">
+                        <h3 class="news-feed-block__text">A New Yorker never looks up...</h3></a>
+                      <time class="news-feed-block__time">7 hours ago</time>
+                      </div>
+                    </li>
+                    <li class="news-feed-block__item">
+                      <img src="" alt="" width="70" height="70" class="news-feed-block__image">
+                      <div class="news-feed-block__wrapper">
+                      <a href="#" class="news-feed-block__link">
+                        <h3 class="news-feed-block__text">A New Yorker doesn`t take cabs</h3></a>
+                      <time class="news-feed-block__time">23 hours ago</time>
+                      </div>
+                    </li>
+                    <li class="news-feed-block__item">
+                      <img src="" alt="" width="70" height="70" class="news-feed-block__image">
+                      <div class="news-feed-block__wrapper">
+                      <a href="#" class="news-feed-block__link">
+                        <h3 class="news-feed-block__text">A New Yorker views celebrities as regular...</h3></a>
+                      <time class="news-feed-block__time">1 day ago</time>
+                      </div>
+                    </li>
+                    <li class="news-feed-block__item">
+                      <img src="" alt="" width="70" height="70" class="news-feed-block__image">
+                      <div class="news-feed-block__wrapper">
+                      <a href="#" class="news-feed-block__link">
                         <h3 class="news-feed-block__text">A New Yorker never looks up...</h3></a>
                       <time class="news-feed-block__time">2 days ago</time>
                       </div>
                     </li>
                   </ul>
+                  </div>
                 </div>
             </div>
             <div class="row">
@@ -772,7 +854,7 @@
                 </div>
             </div>
         </div>
-
     </main>
+    <script src="js/script.js"></script>
 </body>
 </html>
